[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://main.gd" id="1"]

[node name="root" type="Node2D"]
script = ExtResource("1")

[node name="UI" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_bottom = 23.0
text = "Score: 0"

[node name="LivesLabel" type="Label" parent="UI"]
offset_right = 80.0
offset_bottom = 23.0
text = "Lives: 3"

[node name="MoneyLabel" type="Label" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 100.0
text = "Money: $0"

[node name="LaunchLabel" type="Label" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 50.0
offset_right = 100.0
offset_bottom = 73.0
text = "TAP TO LAUNCH BALL"
horizontal_alignment = 1
visible = false

[node name="GameOverLabel" type="Label" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -11.5
offset_right = 100.0
offset_bottom = 11.5
text = "GAME OVER!"
horizontal_alignment = 1
visible = false
